Application WS using REST

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -10,7 +10,10 @@ build.web.excludes=${build.classes.excludes}
 client.urlPart=
 compile.jsps=false
 conf.dir=${source.root}/conf
-debug.classpath=${build.classes.dir}:${javac.classpath}
+debug.classpath=\
+    ${build.classes.dir}:\
+    ${javac.classpath}:\
+    ${libs.restlib_gfv2.classpath}
 debug.test.classpath=\
     ${run.test.classpath}
 display.browser=true
@@ -19,12 +22,15 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
+file.reference.gson-2.8.0.jar=lib/gson-2.8.0.jar
 includes=**
 j2ee.deploy.on.save=true
 j2ee.platform=1.5
 j2ee.server.type=J2EE
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.restlib_gfv2.classpath}:\
+    ${file.reference.gson-2.8.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -53,6 +59,7 @@ lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
 platform.active=JDK_1.8
 resource.dir=setup
+rest.support.on=true
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
