--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -57,7 +57,7 @@ javadoc.windowtitle=
 jspcompilation.classpath=${jspc.classpath}:${javac.classpath}
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
-platform.active=JDK_1.8
+platform.active=default_platform
 resource.dir=setup
 rest.support.on=true
 run.test.classpath=\
