--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -22,6 +22,8 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
+file.reference.asm-3.1.jar=lib/asm-3.1.jar
+file.reference.cglib-nodep-3.2.4.jar=lib/cglib-nodep-3.2.4.jar
 file.reference.gson-2.8.0.jar=lib/gson-2.8.0.jar
 includes=**
 j2ee.deploy.on.save=true
@@ -30,7 +32,11 @@ j2ee.server.type=J2EE
 jar.compress=false
 javac.classpath=\
     ${libs.restlib_gfv2.classpath}:\
-    ${file.reference.gson-2.8.0.jar}
+    ${file.reference.gson-2.8.0.jar}:\
+    ${libs.MySQLDriver.classpath}:\
+    ${libs.hibernate-support.classpath}:\
+    ${file.reference.cglib-nodep-3.2.4.jar}:\
+    ${file.reference.asm-3.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
