--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,7 +24,10 @@ dist.war=${dist.dir}/${war.name}
 excludes=
 file.reference.asm-3.1.jar=lib/asm-3.1.jar
 file.reference.cglib-nodep-3.2.4.jar=lib/cglib-nodep-3.2.4.jar
+file.reference.commons-io-2.5.jar=lib/commons-io-2.5.jar
 file.reference.gson-2.8.0.jar=lib/gson-2.8.0.jar
+file.reference.httpclient-4.5.2.jar=lib/httpclient-4.5.2.jar
+file.reference.httpcore-4.4.4.jar=lib/httpcore-4.4.4.jar
 includes=**
 j2ee.deploy.on.save=true
 j2ee.platform=1.5
@@ -36,7 +39,10 @@ javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${libs.hibernate-support.classpath}:\
     ${file.reference.cglib-nodep-3.2.4.jar}:\
-    ${file.reference.asm-3.1.jar}
+    ${file.reference.asm-3.1.jar}:\
+    ${file.reference.httpclient-4.5.2.jar}:\
+    ${file.reference.httpcore-4.4.4.jar}:\
+    ${file.reference.commons-io-2.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
