--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,6 +26,7 @@ file.reference.asm-3.1.jar=lib/asm-3.1.jar
 file.reference.cglib-nodep-3.2.4.jar=lib/cglib-nodep-3.2.4.jar
 file.reference.commons-io-2.5.jar=lib/commons-io-2.5.jar
 file.reference.gson-2.8.0.jar=lib/gson-2.8.0.jar
+file.reference.hsqldb.jar=lib/hsqldb.jar
 file.reference.httpclient-4.5.2.jar=lib/httpclient-4.5.2.jar
 file.reference.httpcore-4.4.4.jar=lib/httpcore-4.4.4.jar
 includes=**
@@ -42,7 +43,8 @@ javac.classpath=\
     ${file.reference.asm-3.1.jar}:\
     ${file.reference.httpclient-4.5.2.jar}:\
     ${file.reference.httpcore-4.4.4.jar}:\
-    ${file.reference.commons-io-2.5.jar}
+    ${file.reference.commons-io-2.5.jar}:\
+    ${file.reference.hsqldb.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
