--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ file.reference.gson-2.8.0.jar=lib/gson-2.8.0.jar
 file.reference.hsqldb.jar=lib/hsqldb.jar
 file.reference.httpclient-4.5.2.jar=lib/httpclient-4.5.2.jar
 file.reference.httpcore-4.4.4.jar=lib/httpcore-4.4.4.jar
+file.reference.itextpdf-5.5.10.jar=lib/itextpdf-5.5.10.jar
 file.reference.jersey-multipart-1.19.1.jar=lib/jersey-multipart-1.19.1.jar
 includes=**
 j2ee.deploy.on.save=true
@@ -46,7 +47,8 @@ javac.classpath=\
     ${file.reference.httpcore-4.4.4.jar}:\
     ${file.reference.commons-io-2.5.jar}:\
     ${file.reference.hsqldb.jar}:\
-    ${file.reference.jersey-multipart-1.19.1.jar}
+    ${file.reference.jersey-multipart-1.19.1.jar}:\
+    ${file.reference.itextpdf-5.5.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
