--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ file.reference.httpclient-4.5.2.jar=lib/httpclient-4.5.2.jar
 file.reference.httpcore-4.4.4.jar=lib/httpcore-4.4.4.jar
 file.reference.itextpdf-5.5.10.jar=lib/itextpdf-5.5.10.jar
 file.reference.jersey-multipart-1.19.1.jar=lib/jersey-multipart-1.19.1.jar
+file.reference.pdfbox-2.0.4.jar=lib/pdfbox-2.0.4.jar
 includes=**
 j2ee.deploy.on.save=true
 j2ee.platform=1.5
@@ -48,7 +49,8 @@ javac.classpath=\
     ${file.reference.commons-io-2.5.jar}:\
     ${file.reference.hsqldb.jar}:\
     ${file.reference.jersey-multipart-1.19.1.jar}:\
-    ${file.reference.itextpdf-5.5.10.jar}
+    ${file.reference.itextpdf-5.5.10.jar}:\
+    ${file.reference.pdfbox-2.0.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
